--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1,18 +1,17 @@
-body {
-    background-color: white;
-    min-height: 100vh;
-    width: 300px;
+* {
+    padding: 0;
+    margin: 0;
+}
+
+.main {
+    gap: 1rem;
 }
 
 .card {
-    padding: 2em;
+    padding: 1em;
     background-color: rgb(134, 119, 187);
     text-align: left;
     border-radius: 10px;
-}
-
-.read-the-docs {
-    color: #888;
 }
 
 .negrita {
